# arxiv-summarizer

./: .gitignore  LICENSE  README.md  config.py  config.yaml  downloader.py  extractor.py  index.html  main.py  notebooklm_export.py  pdf_parser.py  pyproject.toml  requirements.txt  server.py  setup.py  summarizer.py  utils.py
src/: __init__.py  config.py  downloader.py  extractor.py  pdf_parser.py  summarizer.py
web/: index.html  server.py
