[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-summarizer"
version = "1.0.0"
description = "A Python application that downloads academic papers from arXiv and generates summaries using AI"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [{name = "Unknown"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/user-attachments/arxiv-summarizer"
Documentation = "https://github.com/user-attachments/arxiv-summarizer"
Repository = "https://github.com/user-attachments/arxiv-summarizer"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
]